Updated HTML to match JS

--- a/temperature.html
+++ b/temperature.html
@@ -7,10 +7,16 @@
     <link href="../base1/cockpit.css" type="text/css" rel="stylesheet">
     <script src="../base1/jquery.js"></script>
     <script src="../base1/cockpit.js"></script>
+
+    <link href="smoothie.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="smoothie.js"></script>
     <script type="text/javascript" src="temperature.js"></script>
 
 <style>
+	body {
+		background-color: #4f5255
+	}
+
         tr {
             font-size: 16pt
         }
@@ -21,16 +27,19 @@
     <div align=center>
         <table id=table style="width:100%;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">
             <tr>
-                <th colspan="2" style="font-size:24pt;text-align:center">CPU Temperature</th>
+                <th style="font-size:24pt; color:#ffffff; text-align:center">Temperatures [°C]</th>
             </tr>
             <tr>
-                <td colspan="2" style="text-align:center;width:100%"><canvas id="smoothie-chart" height="300"></canvas></td>
+                <td style="white-space:nowrap; text-align:right;">
+                    CPU 0: <div id="cpu0_temp" style="display:inline-block; color:#ff0000;">?</div> | 
+                    CPU 1: <div id="cpu1_temp" style="display:inline-block; color:#00ffff;">?</div> | 
+                    CPU 2: <div id="cpu2_temp" style="display:inline-block; color:#ffff00;">?</div> | 
+                    CPU 3: <div id="cpu3_temp" style="display:inline-block; color:#f000f0;">?</div> | 
+                    GPU 0: <div id="gpu0_temp" style="display:inline-block; color:#00ff00;">?</div> &nbsp;&nbsp;
+                </td>
             </tr>
             <tr>
-                <th style="text-align:right;width:40%;padding:4px">Current Temperature [°C]:</th><td id="cur_temp" style="text-align:left;width: 60%"></td>
-            </tr>
-            <tr>
-                <th style="text-align:right;padding:4px">Average Temperature [°C](5m):</th><td id=avg_temp style="text-align:left"></td>
+        		<td style="text-align:center;width:100%"><canvas id="temps" height="300"></canvas></td>
             </tr>
         </table>
     </div>
