--- a/temperatures.html
+++ b/temperatures.html
@@ -11,10 +11,6 @@
     <script type="text/javascript" src="smoothie.js"></script>
     <script type="text/javascript" src="temperatures.js"></script>
     <style>
-        body {
-            background-color: #4f5255
-        }
-
         tr {
             font-size: 16pt
         }
@@ -25,7 +21,7 @@
     <div align=center>
         <table id="table" style="width:100%;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">
             <tr>
-                <th style="font-size:24pt; color:#ffffff; text-align:center">Temperatures [°C]</th>
+                <th style="font-size:18pt; text-align: left;">Drive Temperatures [°C]</th>
             </tr>
             <tr>
                 <td style="white-space:nowrap; text-align:right;">
