Remove local CSS

--- a/temperatures.html
+++ b/temperatures.html
@@ -4,7 +4,7 @@
     <title>Pinger</title>
     <meta charset="utf-8">
     <link href="../base1/cockpit.css" type="text/css" rel="stylesheet">
-    <link href="cockpit.css" type="text/css" rel="stylesheet">
+<!--    <link href="cockpit.css" type="text/css" rel="stylesheet">-->
     <link href="temperatures.css" type="text/css" rel="stylesheet">
     <script src="../base1/jquery.js"></script>
     <script src="../base1/cockpit.js"></script>
