Try to add CPU temp

--- a/temperatures.html
+++ b/temperatures.html
@@ -25,6 +25,9 @@
                         <table class="table pf-c-body table-condensed">
                             <tr>
                                 <td class="text-right">
+                                    CPU:
+                                    <div class="temp-display fg-col-1" id="cpu_temp">?</div>
+                                    |
                                     Boot:
                                     <div class="temp-display fg-col-1" id="hdd_dev_nvme0n1_temp">?</div>
                                     |
@@ -49,23 +52,6 @@
                             </tr>
                         </table>
                     </div>
-<!--                    <div class="pf-c-card">-->
-<!--                        <div class="pf-c-card__header"><h3>CPUs</h3></div>-->
-<!--                        <table class="table">-->
-<!--                            <tr>-->
-<!--                                <td style="white-space:nowrap; text-align:right;">-->
-<!--                                    <div id="cpu_0_temp" style="display:inline-block; color:#ff0000;">?</div>-->
-<!--                                    |-->
-
-<!--                                </td>-->
-<!--                            </tr>-->
-<!--                            <tr>-->
-<!--                                <td style="text-align:center;width:100%">-->
-<!--                                    <canvas id="temps" height="300"></canvas>-->
-<!--                                </td>-->
-<!--                            </tr>-->
-<!--                        </table>-->
-<!--                    </div>-->
                 </section>
             </main>
         </div>
