--- a/temperatures.html
+++ b/temperatures.html
@@ -10,7 +10,7 @@
     <script src="../base1/cockpit.js"></script>
 
     <script type="text/javascript" src="smoothie.js"></script>
-    <script type="text/javascript" src="temperatures.js"></script>
+    <script type="text/javascript" src="temperatures.js?2"></script>
 </head>
 <body class="pf-m-redhat-font">
     <div class="ct-page-fill" id="app">
@@ -29,19 +29,19 @@
                                     <div class="temp-display fg-col-1" id="cpu_temp">?</div>
                                     |
                                     Boot:
-                                    <div class="temp-display fg-col-1" id="hdd_dev_nvme0n1_temp">?</div>
+                                    <div class="temp-display fg-col-2" id="hdd_dev_nvme0n1_temp">?</div>
                                     |
                                     RAID 1:
-                                    <div class="temp-display fg-col-2" id="hdd_dev_nvme1n1_temp">?</div>
+                                    <div class="temp-display fg-col-3" id="hdd_dev_nvme1n1_temp">?</div>
                                     |
                                     RAID 2:
-                                    <div class="temp-display fg-col-3" id="hdd_dev_nvme2n1_temp">?</div>
+                                    <div class="temp-display fg-col-4" id="hdd_dev_nvme2n1_temp">?</div>
                                     |
                                     RAID 3:
-                                    <div class="temp-display fg-col-4" id="hdd_dev_nvme3n1_temp">?</div>
+                                    <div class="temp-display fg-col-5" id="hdd_dev_nvme3n1_temp">?</div>
                                     |
                                     RAID 4:
-                                    <div class="temp-display fg-col-5" id="hdd_dev_nvme4n1_temp">?</div>
+                                    <div class="temp-display fg-col-6" id="hdd_dev_nvme4n1_temp">?</div>
 
                                 </td>
                             </tr>
